# butyag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
app/: config.py  inference.py  main.py
exports/: README.md  butyag.onnx
frontend/: Dockerfile  nginx.conf  vite.config.ts
frontend/src/: App.tsx
outputs/: training_history.json
training/: build_dataset.py  dataset.py  export_onnx.py  model.py  predict.py  prepare_dataset.py  prepare_dataset_rsna.py  requirements-train.txt  train.py
