[project]
name = "butyag"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi[all]>=0.136.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "onnxscript>=0.7.0",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "torchvision>=0.27.0",
]
